Bug 1061117 - [MTP] Correct the offset and component in "MozMtpDatabase::CreateEntryForFile". r=dhylands, a=bajaj